--- a/src/Components/User/User.css
+++ b/src/Components/User/User.css
@@ -10,12 +10,22 @@
     margin: 15px;
     align-items: center;
     padding: 15px;
-    width:50%;
+    width:100%;
     border-radius: 15px
 }
 .user-card img {
     border-radius: 15px
 }
 .info-box{
-    width:70%
+    width:60%
+}
+.user-card button {
+    width:120px;
+    height:30px;
+    background-color: #ffffff3d;
+    border-radius: 8px;
+    color: white;
+    cursor: pointer;
+    border : 0;
+    box-shadow: 0px 0px 1px 1px gray;
 }
